--- a/views/search.jade
+++ b/views/search.jade
@@ -46,9 +46,10 @@ body
             li
                 a(href="/search") Search
             li
-                a(href="/register") Register
+                a(href="/sign") Sign
             li
                 a(href="http://www.bitfwd.xyz/") About us
+
 
 .container
     .header
