redirect to alphawallet page

--- a/views/search.jade
+++ b/views/search.jade
@@ -48,7 +48,7 @@ body
             li
                 a(href="/sign") Sign
             li
-                a(href="http://www.bitfwd.xyz/") About us
+                a(href="https://awallet.io/") About us
 
 
 .container
