--- a/views/sign.jade
+++ b/views/sign.jade
@@ -38,7 +38,6 @@ html(lang='en')
         //Primary Page Layout
         //––––––––––––––––––––––––––––––––––––––––––––––––––
 
-        a.github-fork-ribbon(href='https://github.com/James-Sangalli/xcontract', title='Fork me on GitHub') Fork me on GitHub
         div
             ul
                 li
@@ -46,14 +45,14 @@ html(lang='en')
                 li
                     a(href="/search") Search
                 li
-                    a(href="/sign") Sign
+                    a(href="/sign") Sign a message
                 li
                     a(href="https://awallet.io/") About us
+                h3(align="right")
+                    a.btn.btn-link(href='https://github.com/James-Sangalli/xcontract', id="githubTitle") xcontract
 
     .container
         .header
-            h1
-                | Sign a message
         .twelve.columns
             h6
             textarea#messageBox(placeholder="Place your message here")
