With signing and verification and bundle script now only watches

--- a/views/search.jade
+++ b/views/search.jade
@@ -45,7 +45,7 @@ body
             li
                 a(href="/search") Search
             li
-                a(href="/sign") Sign a message
+                a(href="/sign") Sign/Verify
             li
                 a(href="https://awallet.io/") About us
             h3(align="right")
