--- a/views/index.jade
+++ b/views/index.jade
@@ -44,7 +44,7 @@ html(lang='en')
           li
             a(href="/search") Search
           li
-            a(href="/sign") Sign a message
+            a(href="/sign") Sign/Verify
           li
             a(href="https://awallet.io/") About us
           h3(align="right")
