remove double hashing from signing

--- a/views/sign.jade
+++ b/views/sign.jade
@@ -66,6 +66,11 @@ html(lang='en')
             textarea#verificationAddressBox(readonly=true, placeholder="Verification address will go here")
             br
             button#verifyButton Verify
+        .twelve.columns
+            textarea#addressBox(placeholder="Address here")
+            input#balanceBox(readonly=true, placeholder="Balance will go here")
+            br
+            button#getBalanceButton Get Ether Balance
 
 html
 
