--- a/views/index.jade
+++ b/views/index.jade
@@ -46,7 +46,7 @@ html(lang='en')
           li
             a(href="/sign") Sign/Verify
           li
-            a(href="https://awallet.io/") About us
+            a(href="https://alphawallet.com/") About us
           h3(align="right")
             a.btn.btn-link(href='https://github.com/James-Sangalli/xcontract', id="githubTitle") xcontract
 
