--- a/views/search.jade
+++ b/views/search.jade
@@ -47,7 +47,7 @@ body
             li
                 a(href="/sign") Sign/Verify
             li
-                a(href="https://awallet.io/") About us
+                a(href="https://alphawallet.com/") About us
             h3(align="right")
                 a.btn.btn-link(href='https://github.com/James-Sangalli/xcontract', id="githubTitle") xcontract
 
