register each dapp used so it can be searched and use a short url for sharing

--- a/views/search.jade
+++ b/views/search.jade
@@ -63,7 +63,7 @@ body
         if(searchResults != "No dApps found" || (typeof searchResults) != 'undefined' || searchResults == "")
             each result in searchResults
                 p
-                a(href="/api/" + result.contractAddress) #{result.dAppName }
+                a(href="/api/" + result.abi + "/" + result.contractAddress) #{result.dAppName }
                 p
         else
             h6 #{searchResults}
