add translation of notice

--- a/views/index_Zh-Hans.jade
+++ b/views/index_Zh-Hans.jade
@@ -53,9 +53,7 @@ html(lang='zh')
     .container
       .twelve.columns
         h6#notice
-                         | 这个帮站与智能合约交互.
-          | Your keys are kept on your computer and you can easily
-          | share these contracts with anyone by copying the link above.
+                         | 这个网站可以与智能合约交互，帮助你方便地用生成的链接将智能合约分享给朋友。 
         h6 #{warning}
         #abiDiv
           #abiForm
