render chinese page from server, add link to pages

--- a/views/search.jade
+++ b/views/search.jade
@@ -48,6 +48,8 @@ body
                 a(href="/sign") Sign/Verify
             li
                 a(href="https://alphawallet.com/") About us
+            li
+                a(href="/index_Zh-Hans") 中文
             h3(align="right")
                 a.btn.btn-link(href='https://github.com/James-Sangalli/xcontract', id="githubTitle") xcontract
 
