add labels to display network and user address

--- a/views/index.jade
+++ b/views/index.jade
@@ -57,6 +57,8 @@ html(lang='en')
           | Your keys are kept on your computer and you can easily
           | share these contracts with anyone by copying the link above.
         h6 #{warning}
+        p#network
+        p#userAddress
         #abiDiv
           #abiForm
             p Here is the abi:
