--- a/views/index.jade
+++ b/views/index.jade
@@ -78,17 +78,20 @@ html(lang='en')
           if(typeof (functionNames) != 'undefined' && typeof (functionParams) != 'undefined')
             -var index = 0;
             each functionName in functionNames
-              div(id="function" + index)
+              - var idNumber = index * 1000
+              div(id="function" + idNumber)
                 - var count = functionParams[index].length
                 - var argPos = 1
-                button(name=functionName, id=functionName + "&" + index, value=count) #{functionName}
+                button(name=functionName, id=functionName + "&" + idNumber, value=count) #{functionName}
               if(functionParams[index] != "")
                 each functionParam in functionParams[index]
                   -var parsedParams = JSON.parse(functionParam)
-                  input(placeholder = parsedParams.name + " (" + parsedParams.type + ")", id = index + argPos)
+                  -var paramText = parsedParams.name + " (" + parsedParams.type + ")"
+                  h6 #{paramText}
+                  input(id = idNumber + argPos)
                   -argPos++
               else
-                input(placeholder = functionNames[index].toUpperCase() + " has no parameters", readonly=true, id = index)
+                h6 #{functionNames[index].toUpperCase() + " has no parameters"}
               -index++
 
       .twelve.columns
